# titivillus

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test_config.yaml  tiago.py
.github/workflows/: main.yml
chaucer/: README.md  community.py  convert_csv.py  convert_json.py  parse_tei.py
error_test/: synthetic_dataset_20250828_172937.csv  synthetic_dataset_20250828_172937.json  synthetic_dataset_20250828_172937.nexus  synthetic_dataset_20250828_172937_linguistics.csv  synthetic_dataset_20250828_172937_metadata.csv
examples/: README.md  basic_linguistic.yaml  multidomain_analysis.yaml  realistic_linguistic.yaml
network_test/: synthetic_dataset_20250828_174504.csv  synthetic_dataset_20250828_174504.json  synthetic_dataset_20250828_174504.nexus  synthetic_dataset_20250828_174504_linguistics.csv  synthetic_dataset_20250828_174504_metadata.csv
tests/: test_codex.py  test_common.py  test_distance.py
titivillus/: __init__.py  __json2df__.py  __main__.py  __tei2df__.py  __x2titivillus__.py  cli.py  cluster.py  codex.py  common.py  config.py  dimred.py  distance.py  domains.py  dummy.py  errors.py  evolution.py  generator.py  networks.py  outputs.py  plot.py  stemma.py  templates.py  tree.py  validation.py
